Name:                liquid-server
Version:             0.1
Synopsis:            Web Server for Interactive Code Editors
Description:         liquid-server is a general web server that can be used
                     with different code verification tools to provide a
                     brower-based GUI for using the tools.
License:             GPL
License-file:        LICENSE
Author:              Ranjit Jhala
Maintainer:          jhala@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable liquid-server
  hs-source-dirs: src
  main-is: Main.hs

  extensions:
    DoAndIfThenElse
    DeriveGeneric
    DeriveAnyClass

  Build-depends:
    base,
    bytestring,
    text,
    aeson,
    hashable,
    unordered-containers,
    time,
    process,
    filepath,
    transformers,
    directory,
    scotty,
    wai-extra,
    wai-middleware-static,
    wai-cors,
    -- These dependencies are not needed to build liquid-server, but thus they
    -- are made available to the invocations of GHC when verifying programs via
    -- cabal build && cabal exec -- liquid-server:
    liquidhaskell,
    liquid-prelude,
    liquid-vector,
    vector

  other-modules:   Language.Liquid.Server.Config,
                   Language.Liquid.Server.Paths,
                   Language.Liquid.Server.Query,
                   Language.Liquid.Server.Scotty,
                   Language.Liquid.Server.Ticket,
                   Language.Liquid.Server.Types

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
